add UseCompactObjectHeaders note to local-env.sh template